--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
 cffi==1.17.1
 click==8.2.1
+dnspython==2.8.0
+email-validator==2.3.0
 fastapi==0.116.1
 h11==0.16.0
 idna==3.10
